--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <script type="text/javascript">
-      location.href = "order/orderInsert.jsp";
+      location.href = "order/main.jsp";
     </script>
 </body>
 </html>
