--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,7 +5,6 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script type="text/javascript" src="https:code.jquery.com/jquery-latest.min.js"></script>
-	<script type="text/javascript" src="js/common.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/basic.css">
   <link rel="stylesheet" href="css/main01.css">
   <link rel="stylesheet" href="css/font-roboto.css">
@@ -40,6 +39,8 @@
         <a href="#" onclick="window.open('userinfo/signUp.jsp', 'signup', 'width=550 height=500')">
         &nbsp;회원가입
         </a>
+        <a>/</a>
+        <a href="frontOrder?command=orderByUserId&search=order&basongFlag=use">마이페이지</a>
       </span>
 
     <br><br>
