--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -25,7 +25,7 @@
     <div class="header_menu_bar">
 
       <span id="logo">
-        <a href="#none" >
+        <a href="index.html" >
            Tumbler
         </a>
       </span>
@@ -60,7 +60,7 @@
       </span>
 
       <span>
-        <a href="#none">  Q'n'A 게시판  </a>
+        <a href="frontNotice?command=qnaSelectAll">  QnA 게시판  </a>
       </span>
     </div>
 
