--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -32,12 +32,12 @@
 
       <span id="sign" >
         <!-- login.jsp 연걸 -->
-        <a href="#" onclick="window.open('userinfo/signIn.jsp', 'Login', 'width=550 height=500')">
+        <a href="#" onclick="window.open('user/signIn.jsp', 'Login', 'width=550 height=500')">
         로그인&nbsp;
         </a>
         <a>/</a>
         <!--singup.jsp 연걸 -->
-        <a href="#" onclick="window.open('userinfo/signUp.jsp', 'signup', 'width=550 height=500')">
+        <a href="#" onclick="window.open('user/signUp.jsp', 'signup', 'width=550 height=500')">
         &nbsp;회원가입
         </a>
       </span>
