--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,12 +1,10 @@
 <html lang="ko">
-
 <head>
 	<title>텀블러 메인</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script type="text/javascript" src="https:code.jquery.com/jquery-latest.min.js"></script>
-	<script type="text/javascript" src="js/common.js"></script>
-	<link rel="stylesheet" type="text/css" href="css/basic.css">
+	
+<link rel="stylesheet" type="text/css" href="css/basic.css">
   <link rel="stylesheet" href="css/main01.css">
   <link rel="stylesheet" href="css/font-roboto.css">
   <link rel="stylesheet" href="css/font-montserrat.css">
@@ -15,7 +13,44 @@
   .w3-sidebar a {font-family: "Roboto", sans-serif}
   body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
 
-  </style>
+</style>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script type="text/javascript" src="js/common.js"></script>
+	<script>
+	$(function(){
+		$.ajax({
+			url:"signCheck",
+			type:"post",
+			dataType:"text",
+			success:function(result){
+				var str = "";
+				if(result == ""){
+					str += "<a href='#' onclick='windowSignIn()'>로그인&nbsp</a><a>/</a>";
+					str += "<a href='#' onclick='windowSignUp()'>&nbsp;회원가입</a>";
+					$("#sign").html(str);
+				} else {
+					str += "<a href='#'>마이페이지&nbsp;</a>"
+						str += "<a>/</a>"
+						str += "<a href='#'>&nbsp;로그아웃</a>"
+						$("#sign").html(str);
+				}
+			},
+			error:function(err){
+				alert(err);
+			}
+			
+			});
+		});
+		
+	function windowSignIn(){
+		window.open('user/signIn.jsp', 'signIn', 'width=550 height=500')
+	}
+	
+	function windowSignUp(){
+		window.open('user/signUp.jsp', 'signup', 'width=550 height=500')
+	}
+		</script>
 </head>
 
 <body>
@@ -31,15 +66,6 @@
       </span>
 
       <span id="sign" >
-        <!-- login.jsp 연걸 -->
-        <a href="#" onclick="window.open('user/signIn.jsp', 'Login', 'width=550 height=500')">
-        로그인&nbsp;
-        </a>
-        <a>/</a>
-        <!--singup.jsp 연걸 -->
-        <a href="#" onclick="window.open('user/signUp.jsp', 'signup', 'width=550 height=500')">
-        &nbsp;회원가입
-        </a>
       </span>
 
     <br><br>
