--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -40,7 +40,7 @@
         &nbsp;회원가입
         </a>
         <a>/</a>
-        <a href="frontOrder?command=orderByUserId&search=order&basongFlag=use">마이페이지</a>
+        <a href="frontOrder?command=orderByUserId&basongFlag=use">마이페이지</a>
       </span>
 
     <br><br>
