--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -78,7 +78,7 @@
 
       <span>
         <!--productlist.jsp 연걸 -->
-        <a href="#none">  PRODUCT  </a>
+        <a href="frontProduct?command=productSelectAll">  PRODUCT  </a>
       </span>
 
       <span>
