--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -34,6 +34,7 @@
 					str += "<a href='frontOrder?command=orderByUserId&basongFlag=use'>마이페이지</a>"
 						str += "<a>/</a>"
 						str += "<a href='frontUserInfo?command=userSignOut'>&nbsp;로그아웃</a>"
+						str += "<a>/</a>"+"<a href='frontBasket?command=basketByUserID&flag=no'>&nbsp;장바구니</a>"
 						$("#sign").html(str);
 				}
 			},
