--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/font-roboto.css">
   <link rel="stylesheet" href="css/font-montserrat.css">
   <link rel="stylesheet" href="css/font-montserrat-02.css">
+  <link rel="stylesheet" href="css/common.css">
   <style>
   .w3-sidebar a {font-family: "Roboto", sans-serif}
   body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
