--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -51,11 +51,11 @@
 	  });
 		
 	function windowSignIn(){
-		window.open('user/signIn.jsp', 'signIn', 'width=550 height=500')
+		window.open('user/signIn.jsp', 'signIn', 'width=550 height=500');
 	}
 	
 	function windowSignUp(){
-		window.open('user/signUp.jsp', 'signup', 'width=550 height=500')
+	     window.open('user/signUp.jsp', 'signup', 'width=480 height=700');
 	}
 		</script>
 </head>
@@ -99,7 +99,7 @@
             </span>
 
             <span>
-                <a href="${applicationScope.conPath }/frontQna?command=qnaSelectAll">
+                <a href="frontQna?command=qnaSelectAll">
                 QnA 게시판
                 </a>
             </span>
